--- a/src/oracle_project/CheckOut.fxml
+++ b/src/oracle_project/CheckOut.fxml
@@ -32,7 +32,7 @@
       <RadioButton fx:id="rbGallonOfWater" layoutX="14.0" layoutY="250.0" mnemonicParsing="false" text="Gallon Of Water" />
       <RadioButton fx:id="rbGallonsOfWaterAndMineralWater" layoutX="14.0" layoutY="276.0" mnemonicParsing="false" text="Gallons Of Water And Mineral Water" />
       <ChoiceBox fx:id="cbDriver" layoutX="14.0" layoutY="344.0" prefWidth="150.0" />
-      <Button layoutX="33.0" layoutY="408.0" mnemonicParsing="false" onAction="#addButtonAction" text="ADD" />
+      <Button layoutX="18.0" layoutY="408.0" mnemonicParsing="false" onAction="#addButtonAction" prefHeight="25.0" prefWidth="55.0" text="ADD" />
       <Label layoutX="18.0" layoutY="310.0" text="Driver">
          <font>
             <Font size="15.0" />
@@ -47,5 +47,7 @@
         </columns>
       </TableView>
       <Button layoutX="27.0" layoutY="24.0" mnemonicParsing="false" onAction="#BackButtonAction" text="BACK" />
+      <Button layoutX="89.0" layoutY="408.0" mnemonicParsing="false" onAction="#DeleteButton" text="DELETE" />
+      <Button layoutX="58.0" layoutY="449.0" mnemonicParsing="false" text="SAVE" />
    </children>
 </AnchorPane>
