--- a/src/oracle_project/FXMLDocument_1.fxml
+++ b/src/oracle_project/FXMLDocument_1.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.effect.DropShadow?>
@@ -11,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" fx:id="label" prefHeight="312.0" prefWidth="542.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="oracle_project.FXMLDocumentController">
+<AnchorPane id="AnchorPane" fx:id="label" prefHeight="312.0" prefWidth="542.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="oracle_project.FXMLDocument_1_Controller">
    <children>
       <ImageView fitHeight="341.0" fitWidth="542.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -24,22 +25,31 @@
                </color>
             </DropShadow>
          </effect></ImageView>
-      <Text layoutX="14.0" layoutY="89.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ever wondered that your needs of water can be done by just a single touch?" wrappingWidth="146.4375">
+      <Text layoutX="14.0" layoutY="130.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ever wondered that your needs of water can be done by just a single touch?" wrappingWidth="146.4375">
          <font>
             <Font size="16.0" />
          </font>
       </Text>
-      <Button layoutX="130.0" layoutY="16.0" mnemonicParsing="false" prefHeight="24.0" prefWidth="52.0" text="Order" />
+      <Button layoutX="130.0" layoutY="16.0" mnemonicParsing="false" onAction="#OrderButtonAction" prefHeight="24.0" prefWidth="52.0" text="Order" />
       <Button layoutX="182.0" layoutY="16.0" mnemonicParsing="false" text="Join Us " />
       <Button layoutX="239.0" layoutY="16.0" mnemonicParsing="false" text="Help" />
       <Button layoutX="280.0" layoutY="16.0" mnemonicParsing="false" text="Settings" />
-      <MenuButton layoutX="444.0" layoutY="16.0" mnemonicParsing="false" text="Language">
+      <MenuButton layoutX="405.0" layoutY="19.0" mnemonicParsing="false" text="Language">
         <items>
           <MenuItem mnemonicParsing="false" text="English" />
           <MenuItem mnemonicParsing="false" text="Indonesia" />
         </items>
       </MenuButton>
       <Line endX="364.0" endY="8.0" startX="364.0" startY="49.0" />
-      <Button layoutX="391.0" layoutY="16.0" mnemonicParsing="false" onAction="#loginButtonAction" text="Login" />
+      <Label layoutX="14.0" layoutY="17.0" prefHeight="30.0" prefWidth="106.0" text="Welcome,">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Label>
+      <Label fx:id="lName" layoutX="14.0" layoutY="41.0" prefHeight="46.0" prefWidth="112.0">
+         <font>
+            <Font size="25.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
