--- a/src/oracle_project/Login.fxml
+++ b/src/oracle_project/Login.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Line?>
@@ -15,11 +16,10 @@
             <Font size="31.0" />
          </font>
       </Label>
-      <TextField layoutX="192.0" layoutY="122.0" prefHeight="28.0" prefWidth="227.0" promptText="Email" />
-      <TextField layoutX="193.0" layoutY="158.0" prefHeight="28.0" prefWidth="227.0" promptText="Password" />
+      <TextField fx:id="tfUsername" layoutX="192.0" layoutY="122.0" prefHeight="28.0" prefWidth="227.0" promptText="Email" />
       <Button layoutX="96.0" layoutY="200.0" mnemonicParsing="false" style="-fx-background-color: #fffff6;" text="Forgot Your Password ?" />
       <CheckBox layoutX="109.0" layoutY="225.0" mnemonicParsing="false" text="Remember Me" />
-      <Button layoutX="375.0" layoutY="213.0" mnemonicParsing="false" text="LOG IN" />
+      <Button layoutX="375.0" layoutY="213.0" mnemonicParsing="false" onAction="#loginButtonAction" text="LOG IN" />
       <Line endX="242.0" endY="279.5" startX="100.0" startY="279.5" />
       <Label layoutX="263.0" layoutY="264.0" text="OR">
          <font>
@@ -37,5 +37,6 @@
       </Label>
       <Button layoutX="247.0" layoutY="361.0" mnemonicParsing="false" text="SIGN UP" />
       <Button layoutX="341.0" layoutY="361.0" mnemonicParsing="false" onAction="#BackButtonAction" text="BACK" />
+      <PasswordField layoutX="192.0" layoutY="156.0" prefHeight="28.0" prefWidth="227.0" promptText="Password" />
    </children>
 </AnchorPane>
